--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -1,10 +1,9 @@
 doctype html
-html.h-100(lang="en")
+html.h-100(lang="ru")
   head
-    title= Title
+    title= Chat
     meta(name='viewport', content='width=device-width, initial-scale=1')
     link(href=assetPath('main.css') rel="stylesheet")
   body.h-100
-    .container-lg.h-100.p-3
-      .h-100#chat
+    .h-100#chat
     script(src=assetPath('main.js'))
