--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -6,4 +6,4 @@ html.h-100(lang="ru")
     link(href=assetPath('main.css') rel="stylesheet")
   body.h-100
     .h-100#chat
-    script(src=assetPath('main.js'))
+    script(src=assetPath('main.bundle.js'))
